--- a/src/components/templates/NavBar/NavBar.scss
+++ b/src/components/templates/NavBar/NavBar.scss
@@ -6,6 +6,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width:"1200px"){
+        margin: 0 22px;
+        margin-left: 30px;
+    
+    }
     .tabs{
         display: flex;
         align-items: center;
