--- a/src/pages/Home/Header/Header.css
+++ b/src/pages/Home/Header/Header.css
@@ -20,10 +20,11 @@
 .header__data {
   display: flex;
   gap: 4rem;
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   width: 100%;
   /* justify-content: space-between; */
 }
+
 .heading {
   letter-spacing: 2px;
   font-style: normal;
@@ -32,7 +33,7 @@
   line-height: 78px;
   /* or 130% */
   padding: 2.5rem 0;
-  padding-top: 0;
+  /* padding-top: 0; */
 
   text-transform: capitalize;
 
@@ -66,21 +67,22 @@
     z-index: 0; */
 }
 .card1 {
-  top: 30px;
-  width: 285px;
+  top: 90px;
+  width: 300px;
   position: absolute;
 
   z-index: 1;
 }
 .card2 {
-  right: 15px;
-  width: 270px;
+  top: 60px;
+  right: 12px;
+  width: 300px;
   position: absolute;
 }
 .card3 {
-  right: -26px;
-  top: 57px;
-  width: 370px;
+  right: -28px;
+  top: 108px;
+  width: 410px;
   z-index: 1;
   position: absolute;
 }
@@ -91,6 +93,7 @@
   z-index: 999;
 }
 .bottom {
+  position: relative;
   background-color: white;
   border-radius: 0 0 10px 10px;
   padding: 0 47px;
@@ -107,6 +110,9 @@ padding: 15px;
 text-align: center;
 
 color: #071235;
+}
+.form__heading2{
+  display: none;
 }
 .fname{
     display: flex;
@@ -136,6 +142,7 @@ color: #071235;
     margin: 5px 0;
     margin-bottom: 8px;
 }
+
 .input{
     background-color: #fafafa;
     border: 1px solid #315787;
@@ -151,6 +158,9 @@ color: #071235;
     width: 100%;
     margin: 5px 0;
     margin-bottom: 8px;
+}
+.headingg{
+  display: none;
 }
 .lebel{
 
@@ -186,8 +196,8 @@ padding: 20px 0;
 }
 
 .video__card{
-  width: 461px;
-  height: 293px;
+  width: 409px;
+  height: 260px;
  
   
   /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(.jpg), url(.jpg), url(.jpg), url(.jpg); */
@@ -235,7 +245,7 @@ padding: 20px 0;
 
     }
     .info__heading{
-      font-family: var(--ff-rubik);
+      font-family: 'Circular-Loom';
       font-size: 25px;
       font-weight: 700;
       line-height: 30px;
@@ -250,12 +260,105 @@ padding: 20px 0;
     }
 
     @media (max-width:1200px){
+      .form__heading2{
+     display: block;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 33px;
+    padding: 10px;
+    max-width: 325px;
+    margin: 0 auto;
+    
+    text-align: center;
+    
+    color: #071235;
+    }
+    .ratingg{
+      position: absolute !important;
+      bottom: -90px !important;
+      margin: 0 10px;
+    }
+
+    .hello{
+      margin: 0 10px !important;
+    }
+   
+    .form__heading{
+      display: none;
+    }
+    label{
+      display: none;
+    }
+      .heading{
+        display: none;
+      }
+      .bottom__text {
+        padding-bottom: 5rem;
+        margin: 0 10px;
+      }
+      .input{
+        background-color: #fafafa;
+        border: 1px solid #8080804a;
+        border-radius: 5px;
+        font-family: Poppins,sans-serif;
+        font-family: var(--ff-poppins);
+        font-size: 16px;
+        font-style: italic;
+        font-weight: 400;
+        height: 58px;
+        line-height: 20px;
+        padding: 0 10px;
+        width: 100%;
+        margin: 0;
+      }
+      .inputt{
+        background-color: #fafafa;
+        border: 1px solid #8080804a;
+        border-radius: 5px;
+        font-family: Poppins,sans-serif;
+        font-family: var(--ff-poppins);
+        font-size: 16px;
+        font-style: italic;
+        font-weight: 400;
+        height: 58px;
+        line-height: 20px;
+        padding: 0 10px;
+        width: 100%;
+        margin: 0;
+      }
+      .headingg{
+      display: block;
+      display: block;
+      font-size: 35px;
+      font-weight: 700;
+      line-height: 36px;
+      margin: 0;
+      text-align: center;
+      /* padding-bottom: 0; */
+      letter-spacing: 1px;
+      /* padding: 2.5rem 0; */
+      /* padding-top: 0; */
+      text-transform: capitalize;
+      color: white;
+      text-shadow: 0px 2px 0px rgb(34 34 34 / 10%);
+      max-width: 330px;
+      margin: 15px auto;
+      font-family: system-ui;
+      margin-bottom: 0;        
+      }
+      .MuiContainer-root {
+        padding: 0 !important;
+      }
       .header__data {
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
       }
       .left__info {
         width: 100%;
+        padding: 0 10px;
+        flex-direction: column-reverse;
+        margin-top: 3.3rem;
       }
       .right__form {
         width: 100%;
@@ -266,22 +369,30 @@ padding: 20px 0;
       }
       .card1 {
         width: 80%;
+        top: 149px;
       }.card2 {
         width: 70%;
+        top: 131px;
+    right: 12px;
         
       }
       .card3 {
         width: 90%;
-        right: -5%;
+        right: 0;
+        top: 182px;
 
 
       }
+      .upper {
+        padding-top: 11.6rem;
+        
+    }
       .dummuy__info{
         flex-direction: column;
         gap: 2rem;
         height: auto;
         width: calc(100% - 2rem);
-        margin: 2rem auto;
+        margin: 2rem 10px;
         padding: 2rem ;
         
 
@@ -296,23 +407,17 @@ padding: 20px 0;
 
 
     @media (max-width:600px){
-      .heading {
-        font-size: 35px;
-        font-weight: 700;
-        line-height: 43px;
-        margin: 0;
-        text-align: center;
-        padding-bottom: 0;
-
-      }
+      
       .bottom{
-        padding: 0 10px;
+        padding: 0 0px;
+        border-radius: 0;
       }
       .fname{
-flex-direction: column;
+        padding: 0 12px;
+
       }
       .name{
-        width: 100%;
+        /* width: 100%; */
       }
       
       }
