--- a/src/pages/Cards/Cards.scss
+++ b/src/pages/Cards/Cards.scss
@@ -132,6 +132,6 @@ color: #000000;
     }
 
     .react-multiple-carousel__arrow{
-        background: black;
+        background:#0f64c8;
     }
 }
