--- a/src/pages/Home/Header/Header.css
+++ b/src/pages/Home/Header/Header.css
@@ -59,6 +59,9 @@
   font-weight: 700;
   padding: 0 5px;
 }
+.mobile__form__care{
+  display: none;
+}
 
 .top_cards {
   /* position: absolute; */
@@ -67,10 +70,9 @@
     z-index: 0; */
 }
 .card1 {
-  top: 90px;
+  top: 80px;
   width: 300px;
   position: absolute;
-
   z-index: 1;
 }
 .card2 {
@@ -80,7 +82,7 @@
   position: absolute;
 }
 .card3 {
-  right: -28px;
+  right: 0;
   top: 108px;
   width: 410px;
   z-index: 1;
@@ -274,6 +276,16 @@ padding: 20px 0;
     
     color: #071235;
     }
+    .mobile__form__care{
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 0;
+    }
+    .top_cards{
+      display: none;
+    }
     .ratingg{
       position: absolute !important;
       bottom: -90px !important;
@@ -367,19 +379,26 @@ padding: 20px 0;
         width: 100%;
         border-radius: 7px;
       }
-      .card1 {
-        width: 80%;
+      .card4 {
+        width: 86%;
         top: 149px;
-      }.card2 {
-        width: 70%;
-        top: 131px;
-    right: 12px;
+        position: absolute;
+        z-index: 1;
+      }.card5 {
+        width: 82%;
+        top: 112px;
+        right: 21px;
+        position: absolute;
+    /* z-index: 1; */
         
       }
-      .card3 {
-        width: 90%;
-        right: 0;
+      .card6 {
+        width: 73%;
         top: 182px;
+    right: 12px;
+    right: 0;
+    position: absolute;
+    z-index: 1;
 
 
       }
